--- a/platform_code/assessment/static/css/base.css
+++ b/platform_code/assessment/static/css/base.css
@@ -812,6 +812,11 @@ tr.spaceUnder>td {
 
 }
 
+.graph-admin{
+    width: 600px;
+    height: 500px;
+}
+
 .settings-subtitle{
     margin-bottom: 30px;
 }
