Translation and fixes

--- a/platform_code/home/templates/home/profile.html
+++ b/platform_code/home/templates/home/profile.html
@@ -11,7 +11,7 @@
     <a class="active-breadcrumb" href="#" id="active-profile"><span>{% trans "My evaluations" %}</span></a>
 </div>
 
-<h1>{% trans "Your dashboard" %} </h1>
+<h1>{% trans "My dashboard" %} </h1>
 
 {% if messages %}
 <ul class="messages margin-3em">
