--- a/platform_code/assessment/templates/assessment/content-section.html
+++ b/platform_code/assessment/templates/assessment/content-section.html
@@ -221,7 +221,7 @@
                                     </button>
                                 {% endif %}
                                 {% if forloop.counter != element_list|length %}
-                                      <div class="margin-left-1em">
+                                      <div class="margin-left-1em next-element">
                                         <i class="fa fa-arrow-down"
                                            title="{% trans 'Go to the next evaluation element' %}"
                                            onclick="goNextElement({{forloop.counter}})">
